<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hoanglong.bushelper.MainActivity">



    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/activity_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navigation"
        android:background="@color/md_white_1000">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                android:padding="5dp"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:theme="@style/Toolbar"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <android.support.v7.widget.SearchView
                        android:id="@+id/search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_rectangle"
                        android:elevation="5dp"
                        android:theme="@style/Toolbar"
                        android:layout_weight="2"/>

                    <Button
                        android:id="@+id/searchBtn"
                        android:background="@drawable/rounded_rectangle2"
                        android:text="@string/go"
                        android:padding="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/md_black_1000"/>


                </LinearLayout>


            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v4.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnMylocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:elevation="6dp"
            android:src="@drawable/ic_my_location"
            app:elevation="6dp"
            app:fabSize="normal"
            app:rippleColor="#50ffffff"
            app:theme="@style/FloatingActionButton" />


    </android.support.design.widget.CoordinatorLayout>


</RelativeLayout>
