<resources>
    <string name="app_name">Bus Helper</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="logout">Logout</string>
    <string name="user">user</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="remove_marker">Remove marker</string>
    <string name="go">Go</string>
    <string name="no_history">No history</string>
    <string name="no_favorite">No favorite</string>
    <string name="name">Name</string>
    <string name="click_on_map_to_add_your_destinations">Click on map to add your destinations</string>
    <string name="click_on_marker_to_show_options">Click on marker to show options</string>
    <string name="bus_helper">Bus Helper</string>
    <string name="please_choose_location">Please choose location</string>
    <string name="test">Please choose location</string>
    <string name="marker_removed">Marker has been removed</string>
    <string name="cannot_remove_marker">Cannot remove this marker</string>
    <string name="already_exist">This place already in the list</string>
    <string name="no_route">No route</string>
    <string name="added_to_list">Added to list</string>
    <string name="your_location">Your location</string>
    <string name="middle_stop">Middle stop</string>
    <string name="final_stop">Final stop</string>

</resources>
